--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -2,7 +2,7 @@
 > [参考文章](https://www.jianshu.com/p/06794b2a7588)
 
 在`/etc/init.d`目录下新建文件elasticsearch
-```
+```sh
 #!/bin/sh
 #chkconfig: 2345 80 05
 #description: elasticsearch
@@ -44,11 +44,11 @@ esac
 exit $?
 ```
 保存退出，赋予执行权限
-```
+```bash
 chmod +x elasticsearch 
 ```
 添加到开机启动任务
-```
+```bash
 chkconfig -add elasticsearch
 ```
 使用`service elasticsearch start/stop/restart`来操作
