--- a/Linux/02. vim和bash效率篇.md
+++ b/Linux/02. vim和bash效率篇.md
@@ -105,53 +105,57 @@
 | `<c-x><c-o>` | Emoji:dog:补全                       |
 
 
-  [1]: https://raw.githubusercontent.com/chxuan/vimplus/master/screenshots/vimplus-logo.png
-  [2]: https://raw.githubusercontent.com/chxuan/vimplus/master/screenshots/main.png
-  [3]: https://brew.sh/
-  [4]: https://github.com/junegunn/vim-plug
-  [5]: https://github.com/Valloric/YouCompleteMe
-  [6]: https://github.com/scrooloose/nerdtree
-  [8]: https://github.com/vim-airline/vim-airline
-  [9]: https://github.com/powerline/powerline
-  [10]: https://github.com/jiangmiao/auto-pairs
-  [12]: https://github.com/ctrlpvim/ctrlp.vim
-  [13]: https://github.com/majutsushi/tagbar
-  [14]: https://github.com/vim-scripts/taglist.vim
-  [15]: https://github.com/ryanoasis/vim-devicons
-  [16]: https://github.com/tpope/vim-surround
-  [17]: https://github.com/tpope/vim-commentary
-  [18]: https://github.com/tpope/vim-repeat
-  [19]: https://github.com/tpope/vim-endwise
-  [20]: https://github.com/godlygeek/tabular
-  [23]: https://github.com/easymotion/vim-easymotion
-  [24]: https://github.com/haya14busa/incsearch.vim
-  [25]: https://github.com/mhinz/vim-startify
-  [26]: https://github.com/iamcco/markdown-preview.vim
-  [27]: https://github.com/chxuan/change-colorscheme
-  [36]: https://github.com/tpope/vim-fugitive
-  [37]: https://pan.baidu.com/s/1-Z_U-eKbkMQqmI03qTzmFw
-  [38]: https://github.com/Valloric/YouCompleteMe
-  [39]: https://github.com/chxuan/vimplus/issues
-  [50]: https://github.com/junegunn/vim-slash
-  [51]: https://github.com/ryanoasis/nerd-fonts
-  [52]: https://github.com/tiagofumo/vim-nerdtree-syntax-highlight
-  [53]: https://github.com/Xuyuanp/nerdtree-git-plugin
-  [54]: https://github.com/VundleVim/Vundle.vim
-  [56]: https://github.com/Yggdroot/LeaderF
-  [57]: https://github.com/Shougo/echodoc.vim
-  [58]: https://github.com/chxuan/cpp-mode
-  [59]: https://github.com/chxuan/vimplus/blob/master/help.md
-  [60]: https://github.com/terryma/vim-smooth-scroll
-  [62]: https://github.com/mileszs/ack.vim
-  [64]: https://github.com/junegunn/gv.vim
-  [65]: https://raw.githubusercontent.com/terryma/vim-multiple-cursors/master/assets/example1.gif
-  [66]: https://github.com/chxuan/vimplus-startify
-  [67]: https://github.com/chxuan/prepare-code
-  [68]: https://github.com/rhysd/clever-f.vim
-  [69]: https://github.com/rhysd/github-complete.vim
-  [70]: https://github.com/chxuan/vim-buffer
-  [72]: https://github.com/chxuan/vim-edit
-  [74]: https://github.com/chxuan/tagbar
-  [75]: https://github.com/chxuan/vimplus/blob/master/LICENSE
- 
+[1]: https://raw.githubusercontent.com/chxuan/vimplus/master/screenshots/vimplus-logo.png
+[2]: https://raw.githubusercontent.com/chxuan/vimplus/master/screenshots/main.png
+[3]: https://brew.sh/
+[4]: https://github.com/junegunn/vim-plug
+[5]: https://github.com/Valloric/YouCompleteMe
+[6]: https://github.com/scrooloose/nerdtree
+[8]: https://github.com/vim-airline/vim-airline
+[9]: https://github.com/powerline/powerline
+[10]: https://github.com/jiangmiao/auto-pairs
+[12]: https://github.com/ctrlpvim/ctrlp.vim
+[13]: https://github.com/majutsushi/tagbar
+[14]: https://github.com/vim-scripts/taglist.vim
+[15]: https://github.com/ryanoasis/vim-devicons
+[16]: https://github.com/tpope/vim-surround
+[17]: https://github.com/tpope/vim-commentary
+[18]: https://github.com/tpope/vim-repeat
+[19]: https://github.com/tpope/vim-endwise
+[20]: https://github.com/godlygeek/tabular
+[23]: https://github.com/easymotion/vim-easymotion
+[24]: https://github.com/haya14busa/incsearch.vim
+[25]: https://github.com/mhinz/vim-startify
+[26]: https://github.com/iamcco/markdown-preview.vim
+[27]: https://github.com/chxuan/change-colorscheme
+[36]: https://github.com/tpope/vim-fugitive
+[37]: https://pan.baidu.com/s/1-Z_U-eKbkMQqmI03qTzmFw
+[38]: https://github.com/Valloric/YouCompleteMe
+[39]: https://github.com/chxuan/vimplus/issues
+[50]: https://github.com/junegunn/vim-slash
+[51]: https://github.com/ryanoasis/nerd-fonts
+[52]: https://github.com/tiagofumo/vim-nerdtree-syntax-highlight
+[53]: https://github.com/Xuyuanp/nerdtree-git-plugin
+[54]: https://github.com/VundleVim/Vundle.vim
+[56]: https://github.com/Yggdroot/LeaderF
+[57]: https://github.com/Shougo/echodoc.vim
+[58]: https://github.com/chxuan/cpp-mode
+[59]: https://github.com/chxuan/vimplus/blob/master/help.md
+[60]: https://github.com/terryma/vim-smooth-scroll
+[62]: https://github.com/mileszs/ack.vim
+[64]: https://github.com/junegunn/gv.vim
+[65]: https://raw.githubusercontent.com/terryma/vim-multiple-cursors/master/assets/example1.gif
+[66]: https://github.com/chxuan/vimplus-startify
+[67]: https://github.com/chxuan/prepare-code
+[68]: https://github.com/rhysd/clever-f.vim
+[69]: https://github.com/rhysd/github-complete.vim
+[70]: https://github.com/chxuan/vim-buffer
+[72]: https://github.com/chxuan/vim-edit
+[74]: https://github.com/chxuan/tagbar
+[75]: https://github.com/chxuan/vimplus/blob/master/LICENSE
+  
+## 第二部分 bash 部分
+### 2.1 终端中的 zsh 和 bash 的介绍
+
+  
  
