--- a/Linux/02. vim和bash效率篇.md
+++ b/Linux/02. vim和bash效率篇.md
@@ -155,7 +155,129 @@
 [75]: https://github.com/chxuan/vimplus/blob/master/LICENSE
   
 ## 第二部分 bash 部分
-### 2.1 终端中的 zsh 和 bash 的介绍
+### 2.1 终端中的 zsh 和 bash 的泛述
+zsh、bash 都是 shell，zsh 比 bash 更加强大，功能也更加完善；
+
+##### 切换
+Linux/Unix 产品一般默认的都是使用 bash。
+
+##### 从 bash 切换到 zsh
+1. 使用系统自带的 `zsh：chsh -s /bin/zsh`,输入密码成功切换，重启终端即可使用 zsh。
+
+2. 使用第三方的 zsh，如从 brew 安装的 zsh。
+    ```
+    sudo chsh -s /usr/local/bin/zsh
+    ```
+##### 从 zsh 切换回 bash
+```
+chsh -s /bin/bash
+```
+##### zsh 和 bash 的环境变量
+1. bash 的环境变量是`.bash_profile`文件。
+2. zsh 的环境变量是`.zshrc`文件。
+
+***PS：如果从 bash 切换到 zsh，但想保留 bash 所设置的环境变量，可在 .zshrc文件末尾添加 source ~/.bash_profile 保存退出，并重启终端即可使用 bash 的环境变量。***
+
+### 2.2 在ubuntu下安装 zsh 和Oh-My-Zsh
+> 安装Oh-My-Zsh之前必须安装zsh
+
+1. 安装zsh 并且切换 到zsh；
+    ```sh
+    sudo apt-get install zsh    #安装zsh
+    zsh --version               #确认是否安装成功
+    
+    sudo chsh -s $(which zsh)   # 设置zsh为默认shell
+    
+    注销重新登录
+    ```
+2. curl安装 oh-my—zsh
+    ```sh
+    sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+    ```
+3. 安装autojump自动跳转插件 (使用命令 `j`可以快速进入曾经进入过的目录)
+    ```sh
+    sudo apt-get install autojump
+    echo '. /usr/share/autojump/autojump.sh' >> ~/.zshrc
+    source ~/.zshrc
+    ```
+4. 安装zsh-syntax-highlighting语法高亮插件
+    ```sh
+    git clone https://github.com/zsh-users/zsh-syntax-highlighting.git
+    echo "source ${(q-)PWD}/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh" >> ${ZDOTDIR:-$HOME}/.zshrc
+
+    source ~/.zshrc
+    ```
+5. 安装zsh-autosuggestions语法历史记录插件
+    ```sh
+    git clone git://github.com/zsh-users/zsh-autosuggestions $ZSH_CUSTOM/plugins/zsh-autosuggestions
+    ```
+    在`~/.oh-my-zsh/plugins`下有很多插件，直接使用`plugins=(ant mvn svn git)`这样的命令是可以直接加载插件的(**但是ubuntu是不支持命令加载插件的**)
+    ```sh
+    plugins=(zsh-autosuggestions)
+    ```
+    需要编辑`vim ~/.zshrc`
+    ```
+    plugins=(
+      git
+      zsh-autosuggestions
+    )
+    ```
+   生效：
+    ```
+    source ~/.zshrc
+    ```
+    > 可能看不到变化，可能你的字体颜色太淡
+    
+    ```
+    vim ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+    ```
+    修改 `ZSH_AUTOSUGGEST_HIGHLIGHT_STYLE='fg=7'`,并且让其生效：
+    ```
+    source ~/.zshr
+    ```
+    
+### 2.3 修改 Oh-My-Zsh 主题
+> 官方主题：https://github.com/robbyrussell/oh-my-zsh/wiki/External-themes
+
+```
+sudo vim ~/.zshrc
+```
+找到`ZSH_THEME="robbyrussell"`，修改为：`ZSH_THEME="ys"`；
+
+生效：
+```
+source ~/.zshrc
+```
+### 2.4 让系统支持中文
+如果在 Ubuntu 系统中出现中文乱码，可能是因为系统没有配置中文字符编码。Ubuntu 系统的字符编码保存在文件 `/var/lib/locales/supported.d/local` 中。
+
+要为 Ubuntu 系统添加中文字符编码，可以直接使用 locale-gen:
+```
+sudo locale-gen zh_CN.UTF-8
+```
+使用以上命令即可完成中文字符集的添加，完成后会在 /var/lib/locales/supported.d/local 文件中添加一行如下的内容：
+
+zh_CN.UTF-8 UTF-8
+也可以直接修改 `/var/lib/locales/supported.d/local` 文件，可以先查看下该文件的内容，大致如下：
+```
+zh_CN.UTF-8 UTF-8
+en_US.UTF-8 UTF-8
+zh_CN.GB18030 GB18030
+zh_CN.GBK GBK
+```
+如果要为 Linux 添加字符集，可以直接在该文件尾添加一行相应的字符编码，然后执行以下命令：
+```
+sudo dpkg-reconfigure locales
+```
+系统要支持中文，需要系统中有相应的中文语言环境包。安装简体中文语言包：
+```
+sudo apt-get install language-pack-zh-hans language-pack-zh-hans-base language-pack-gnome-zh-hans language-pack-gnome-zh-hans-base
+```
+或者：
+```
+sudo apt-get install `check-language-support -l zh-hans`
+```
+重启或者重新登录即可
 
   
  
