--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -15,8 +15,8 @@ export JAVA_HOME JAVA_BIN PATH CLASSPATH
 
 case "$1" in
 start)
-    su xingdu<<!
-    cd /home/elasticsearch
+    su vagrant<<!
+    cd /var/www/elasticsearch
     ./bin/elasticsearch -d
 !
     echo "elasticsearch startup"
@@ -30,8 +30,8 @@ restart)
     es_pid=`ps aux|grep elasticsearch | grep -v 'grep elasticsearch' | awk '{print $2}'`
     kill -9 $es_pid
     echo "elasticsearch stopped"
-    su xingdu<<!
-    cd /home/elasticsearch
+    su vagrant<<!
+    cd /var/www/elasticsearch
     ./bin/elasticsearch -d
 !
     echo "elasticsearch startup"
