--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -15,10 +15,10 @@ export JAVA_HOME JAVA_BIN PATH CLASSPATH
 
 case "$1" in
 start)
-    su vagrant<<!
+    su -l vagrant <<EOF
     cd /var/www/elasticsearch
     ./bin/elasticsearch -d
-!
+EOF    
     echo "elasticsearch startup"
     ;;  
 stop)
@@ -30,10 +30,10 @@ restart)
     es_pid=`ps aux|grep elasticsearch | grep -v 'grep elasticsearch' | awk '{print $2}'`
     kill -9 $es_pid
     echo "elasticsearch stopped"
-    su vagrant<<!
+    su -l vagrant <<EOF
     cd /var/www/elasticsearch
     ./bin/elasticsearch -d
-!
+EOF
     echo "elasticsearch startup"
     ;;  
 *)
