--- a/Linux/02. vim和bash效率篇.md
+++ b/Linux/02. vim和bash效率篇.md
@@ -17,6 +17,11 @@
     cd ~/.vimplus
     ./install.sh
     ```
+    
+* 个性化设置：让文本自动打断换行 `vim ~/.vimrc.local`
+    ```
+    set wrap
+    ```
  ### 1.2 关于插件的运用
  > 修改 ~/.vimrc.local 文件内容，以启用个性化定制，可覆盖 ~/.vimrc 中的设置。
  
