--- a/Linux/02. vim和bash效率篇.md
+++ b/Linux/02. vim和bash效率篇.md
@@ -18,10 +18,12 @@
     ./install.sh
     ```
     
-* 个性化设置：让文本自动打断换行 `vim ~/.vimrc.local`
-    ```
-    set wrap
-    ```
+**个性化设置**
+> 让文本自动打断换行 `vim ~/.vimrc.local` (关于 对 vim 或者vimplus 的单独设置 可以编辑此文件，此文件会自动覆盖 `~/.vimrc`中的设置)
+  
+```sh
+set wrap    # 自动换行
+```
  ### 1.2 关于插件的运用
  > 修改 ~/.vimrc.local 文件内容，以启用个性化定制，可覆盖 ~/.vimrc 中的设置。
  
