--- a/Linux/02. vim和bash效率篇.md
+++ b/Linux/02. vim和bash效率篇.md
@@ -19,7 +19,7 @@
     ```
     
 **个性化设置**
-> 让文本自动打断换行 `vim ~/.vimrc.local` (关于 对 vim 或者vimplus 的单独设置 可以编辑此文件，此文件会自动覆盖 `~/.vimrc`中的设置)
+> 编辑 `vim ~/.vimrc.local` (关于 对 vim 或者vimplus 的单独设置 可以编辑此文件，此文件会自动覆盖 `~/.vimrc`中的设置)
   
 ```sh
 set wrap    # 自动换行
