--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -1,7 +1,7 @@
 # 1.Elasticsearch开机启动脚本
 > [参考文章](https://www.jianshu.com/p/06794b2a7588)
 
-在`/etc/init.d`目录下新建文件elasticsearch
+在`/etc/init.d`目录下新建文件，为 `elastic-master`（不能起名包含elasticsearc 这个关键字，会被`kill `掉）
 ```sh
 #!/bin/sh
 #chkconfig: 2345 80 05
@@ -13,12 +13,20 @@ export PATH=$PATH:$JAVA_HOME/bin
 export CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar
 export JAVA_HOME JAVA_BIN PATH CLASSPATH
 
+DEBUG=true
+USER="vagrant"
+ROOT_PATH="/var/www/elasticsearch-master"
+
 case "$1" in
 start)
-    su -l vagrant <<EOF
-    cd /var/www/elasticsearch
-    ./bin/elasticsearch -d
-EOF    
+    su $USER<<EOF
+    cd $ROOT_PATH &&
+    if [ $DEBUG ]; then 
+        ./bin/elasticsearch;
+    else 
+        ./bin/elasticsearch -d;
+    fi
+EOF
     echo "elasticsearch startup"
     ;;  
 stop)
@@ -30,9 +38,14 @@ restart)
     es_pid=`ps aux|grep elasticsearch | grep -v 'grep elasticsearch' | awk '{print $2}'`
     kill -9 $es_pid
     echo "elasticsearch stopped"
-    su -l vagrant <<EOF
-    cd /var/www/elasticsearch
-    ./bin/elasticsearch -d
+    
+    su $USER<<EOF
+    cd $ROOT_PATH &&
+    if [ $DEBUG ]; then 
+        ./bin/elasticsearch;
+    else 
+        ./bin/elasticsearch -d;
+    fi
 EOF
     echo "elasticsearch startup"
     ;;  
@@ -45,10 +58,10 @@ exit $?
 ```
 保存退出，赋予执行权限
 ```bash
-chmod +x elasticsearch 
+chmod +x elastic-master
 ```
 添加到开机启动任务
 ```bash
-chkconfig -add elasticsearch
+chkconfig -add elastic-master
 ```
-使用`service elasticsearch start/stop/restart`来操作
+使用`service elastic-master start/stop/restart`来操作
