--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -60,8 +60,8 @@ exit $?
 ```bash
 chmod +x elastic-master
 ```
-添加到开机启动任务
+添加到开机启动任务 `vim /etc/rc.local`
 ```bash
-chkconfig -add elastic-master
+/etc/init.d/elastic-master start
 ```
 使用`service elastic-master start/stop/restart`来操作
