--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -64,4 +64,4 @@ chmod +x elastic-master
 ```bash
 /etc/init.d/elastic-master start
 ```
-使用`service elastic-master start/stop/restart`来操作
+使用`/etc/init.d/elastic-master start/stop/restart`来操作
