--- a/Linux/01. Elasticsearch开机启动脚本.md
+++ b/Linux/01. Elasticsearch开机启动脚本.md
@@ -21,7 +21,7 @@ case "$1" in
 start)
     su $USER<<EOF
     cd $ROOT_PATH &&
-    if [ $DEBUG ]; then 
+    if [ $DEBUG = true ]; then 
         ./bin/elasticsearch;
     else 
         ./bin/elasticsearch -d;
@@ -41,7 +41,7 @@ restart)
     
     su $USER<<EOF
     cd $ROOT_PATH &&
-    if [ $DEBUG ]; then 
+    if [ $DEBUG = true ]; then 
         ./bin/elasticsearch;
     else 
         ./bin/elasticsearch -d;
