Update 04. Ubuntu 各个软件换源随笔.md

--- a/Linux/04. Ubuntu 各个软件换源随笔.md
+++ b/Linux/04. Ubuntu 各个软件换源随笔.md
@@ -1,7 +1,8 @@
 # Ubuntu 各个软件换源随笔
 ## 第一部分 概述
 ### 1.1 用add-apt-repository命令 
-> 不过 add-apt-repository 命令一般系统是没有自带的，所以还需要自己安装。
+> 不过 add-apt-repository 命令一般系统是没有自带的，所以还需要自己安装。 
+> 1. 它对应的官方网站是： https://launchpad.net
 
 ubuntu不同版本中这个命令的安装方式不同：
  
@@ -13,6 +14,23 @@ ubuntu不同版本中这个命令的安装方式不同：
     ```
     sudo apt-get install software-properties-common    
     ```
+#### 实例-1 
+![image](https://my-note.oss-cn-beijing.aliyuncs.com/2018/12/2018-12-26-21.png)
+
+里面包含一个redis 对应的 信息是 ： 
+
+|Package|	Version|	Uploaded by|
+|---|---|---|
+|redis|	5:5.0.3-3chl1~xenial1	|chris lea (2018-12-22)|
+|redis|	5:5.0.3-3chl1~trusty1	|chris lea (2018-12-22)|
+|redis|	5:5.0.3-3chl1~cosmic1	|chris lea (2018-12-22)|
+|redis|	5:5.0.3-3chl1~bionic1	|chris lea (2018-12-22)|
+|redis|	5:4.0.10-1chl1~artful1|chris lea (2018-06-13)|
+
+其中第一个就是 ubuntu 16.04 所用的镜像 ，添加镜像命令如下
+```
+sudo add-apt-repository  ppa:chris-lea/redis-server
+```
 ### 1.2 指定版本安装
 * 查看所有的版本
     ```
