--- a/Nginx/01.nginx使用Basic_Auth.md
+++ b/Nginx/01.nginx使用Basic_Auth.md
@@ -25,8 +25,7 @@ server{
   location /
   {
       auth_basic "nginx basic http test for cjw.com";
-      auth_basic_user_file conf/htpasswd;
-      autoindex on;
+      auth_basic_user_file conf.d/htpasswd;
   }
 }
 ```
@@ -35,8 +34,8 @@ server{
 > 可以使用htpasswd，或者使用openssl
 
 ```bash
-printf "cjw:$(openssl passwd -crypt 123456)\n" >>conf/htpasswd
-cat conf/htpasswd
+printf "cjw:$(openssl passwd -crypt 123456)\n" >>conf.d/htpasswd
+cat conf.d/htpasswd
 
 cjw:xyJkVhXGAZ8tM
 ```
@@ -46,9 +45,9 @@ cjw:xyJkVhXGAZ8tM
 ### 1.6 访问 站点
 #### a. 使用命令行访问
   ```sh
-  curl -u cjw:123123 http://www.cjwme.com
+  curl -u cjw:123456 http://www.cjwme.com
 
-  wget --http-user=cjw --http-passwd=123123 http://www.cjwme.com
+  wget --http-user=cjw --http-passwd=123456 http://www.cjwme.com
   ```
 #### b. 使用 browser 访问 , 会直接弹框， 其实底层是添加 认证头信息
 ```
