--- a/docker/01.docker相关的命令.md
+++ b/docker/01.docker相关的命令.md
@@ -106,6 +106,15 @@ EOF
 sudo systemctl daemon-reload
 sudo systemctl restart docker
 ```
+### 1.6 docker 运行与配置
+docker 开启自启动：
+```
+systemctl enable docker.service
+```
+docker 启动：
+```
+systemctl start docker.service
+```
 ## 第二部分 docker-compose 安装
 ```
 sudo curl -L "https://github.com/docker/compose/releases/download/1.22.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
