--- a/docker/kubernetes 安装/01. 安装Kubernetes 单Master 节点.md
+++ b/docker/kubernetes 安装/01. 安装Kubernetes 单Master 节点.md
@@ -63,7 +63,30 @@ hostnamectl status
 # 设置 hostname 解析
 echo "127.0.0.1   $(hostname)" >> /etc/hosts
 ```
-### 1.5 安装 docker / kubelet
+### 1.5 检查网络
+在所有节点执行命令
+```sh
+[root@demo-master-a-1 ~]$ ip route show
+default via 172.21.0.1 dev eth0
+169.254.0.0/16 dev eth0 scope link metric 1002
+172.21.0.0/20 dev eth0 proto kernel scope link src 172.21.0.12
+
+[root@demo-master-a-1 ~]$ ip address
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+    inet 127.0.0.1/8 scope host lo
+       valid_lft forever preferred_lft forever
+2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
+    link/ether 00:16:3e:12:a4:1b brd ff:ff:ff:ff:ff:ff
+    inet 172.17.216.80/20 brd 172.17.223.255 scope global dynamic eth0
+       valid_lft 305741654sec preferred_lft 305741654sec
+```
+> kubelet使用的IP地址
+> - `ip route show` 命令中，可以知道机器的默认网卡，通常是 eth0，如 default via 172.21.0.23 dev eth0
+> - `ip address` 命令中，可显示默认网卡的 IP 地址，Kubernetes 将使用此 IP 地址与集群内的其他节点通信，如 172.17.216.80
+> - 所有节点上 Kubernetes 所使用的 IP 地址必须可以互通（无需 NAT 映射、无安全组或防火墙隔离）
+
+### 1.6 安装 docker / kubelet
 请认真核对如下选项，8 个都选中后才能显示如何安装。
 
 1. 我的任意节点 centos 版本在兼容列表中
