--- a/docker/kubernetes 安装/01. 安装Kubernetes 单Master 节点.md
+++ b/docker/kubernetes 安装/01. 安装Kubernetes 单Master 节点.md
@@ -285,6 +285,24 @@ wget https://kuboard.cn/install-script/calico/calico-3.9.2.yaml
 sed -i "s#192\.168\.0\.0/16#${POD_SUBNET}#" calico-3.9.2.yaml
 kubectl apply -f calico-3.9.2.yaml
 ```
+#### 注意事项：
+- 请确保您使用 root 用户执行初始化命令
+- 不能下载 kubernetes 的 docker 镜像
+  - 安装文档中，默认使用阿里云的 docker 镜像仓库，然而，有时候，该镜像会罢工
+  - 如碰到不能下载 docker 镜像的情况，请尝试手工初始化，并修改手工初始化脚本里的第22行（文档中已高亮）为：
+    ```
+    imageRepository: gcr.azk8s.cn/google-containers
+    ```
+- 检查环境变量，执行如下命令
+  ```
+  echo MASTER_IP=${MASTER_IP} && echo APISERVER_NAME=${APISERVER_NAME} && echo POD_SUBNET=${POD_SUBNET}
+  ```
+  请验证如下几点：
+    - 环境变量 MASTER_IP 的值应该为 master 节点的 内网IP，如果不是，请重新 export
+    - APISERVER_NAME 不能是 master 的 hostname
+    - APISERVER_NAME 必须全为小写字母、数字、小数点，不能包含减号
+    - POD_SUBNET 所使用的网段不能与 master节点/worker节点 所在的网段重叠。该字段的取值为一个 CIDR 值，如果您对 CIDR 这个概念还不熟悉，请仍然执行 export POD_SUBNET=10.100.0.1/16 命令，不做修改
+- 重新初始化 master 节点前，请先执行 `kubeadm reset -f` 操作
 
 #### 检查master 初始化结果
 ```sh
@@ -325,6 +343,62 @@ echo "${MASTER_IP}    ${APISERVER_NAME}" >> /etc/hosts
 # 替换为 master 节点上 kubeadm token create 命令的输出
 kubeadm join apiserver.demo:6443 --token mpfjma.4vjjg8flqihor4vt     --discovery-token-ca-cert-hash sha256:6f7a8e40a810323672de5eee6f4d19aa2dbdb38411845a1bf5dd63485c43d303
 ```
+#### 注意事项：
+#### worker 节点不能访问 apiserver
+在worker节点执行以下语句可验证worker节点是否能访问 apiserver
+```
+curl -ik https://apiserver.demo:6443
+```
+如果不能，请在 master 节点上验证
+```
+curl -ik https://localhost:6443
+```
+正常输出结果如下所示：
+```
+HTTP/1.1 403 Forbidden
+Cache-Control: no-cache, private
+Content-Type: application/json
+X-Content-Type-Options: nosniff
+Date: Fri, 15 Nov 2019 04:34:40 GMT
+Content-Length: 233
+
+{
+  "kind": "Status",
+  "apiVersion": "v1",
+  "metadata": {
+...
+```
+> 可能原因
+- 如果 master 节点能够访问 apiserver、而 worker 节点不能，则请检查自己的网络设置
+- /etc/hosts 是否正确设置？
+
+##### worker 节点默认网卡
+- Kubelet使用的 IP 地址 与 master 节点可互通（无需 NAT 映射），且没有防火墙、安全组隔离
+  - 如果你使用 vmware 或 virtualbox 创建虚拟机用于 K8S 学习，可以尝试 NAT 模式的网络，而不是桥接模式的网络
+
+###### 移除worker节点并重试
+> WARNING
+- 正常情况下，您无需移除 worker 节点，如果添加到集群出错，您可以移除 worker 节点，再重新尝试添加
+
+在准备移除的 worker 节点上执行
+```
+# 只在 worker 节点执行
+kubeadm reset -f
+```
+在 master 节点 demo-master-a-1 上执行
+```
+# 只在 master 节点执行
+kubectl get nodes -o wide
+```
+如果列表中没有您要移除的节点，则忽略下一个步骤
+```
+# 只在 master 节点执行
+kubectl delete node demo-worker-x-x
+```
+> TIP
+- 将 demo-worker-x-x 替换为要移除的 worker 节点的名字
+- worker 节点的名字可以通过在节点 demo-master-a-1 上执行 kubectl get nodes 命令获得
+
 #### 检查初始化结果
 在 master 节点上执行
 ```sh
