--- a/Linux装机/09.centos7上docker命令自动补全.md
+++ b/Linux装机/09.centos7上docker命令自动补全.md
@@ -15,3 +15,7 @@ yum install -y bash-completion
 source /usr/share/bash-completion/bash_completion
 source /usr/share/bash-completion/completions/docker
 ```
+k8s 的命令补全：
+```
+source <(kubectl completion bash)
+```
