--- a/Linux装机/08.常用的网站地址.md
+++ b/Linux装机/08.常用的网站地址.md
@@ -5,3 +5,4 @@
 2. ShellCheck： https://www.shellcheck.net/#
 3. linux的包管理： https://pkgs.org/
 4. 力扣：https://leetcode-cn.com/
+5. 收集免费的接口服务,做一个api的搬运工: https://github.com/fangzesheng/free-api
