--- a/Linux装机/08.常用的网站地址.md
+++ b/Linux装机/08.常用的网站地址.md
@@ -6,3 +6,4 @@
 3. linux的包管理： https://pkgs.org/
 4. 力扣：https://leetcode-cn.com/
 5. 收集免费的接口服务,做一个api的搬运工: https://github.com/fangzesheng/free-api
+6. 分享 GitHub 上有趣、入门级的开源项目 https://hellogithub.com/
