--- a/Linux装机/10.设置静态ip.md
+++ b/Linux装机/10.设置静态ip.md
@@ -6,7 +6,9 @@ BOOTPROTO=static #这里讲dhcp换成ststic
 ONBOOT=yes #将no换成yes
 
 #新增
+NM_CONTROLLED=no
 IPADDR=10.6.23.22 #静态IP
 GATEWAY=10.6.20.1 #默认网关
 NETMASK=255.255.248.0  #子网掩码
+DNS1=8.8.8.8
 ```
