--- a/Linux装机/11. centos安装php.md
+++ b/Linux装机/11. centos安装php.md
@@ -23,5 +23,5 @@ $ sudo yum install php
 ```
 安装 php-fpm 和一些其他模块
 ```
-$ sudo yum install php-php-fpm php-php-gd php-php-json php-php-mbstring php-php-mysqlnd php-php-xml php-php-xmlrpc php-php-opcache
+$ sudo yum install php-fpm php-gd php-json php-mbstring php-mysqlnd php-xml php-xmlrpc php-opcache
 ```
