--- a/mongo/1. 慢查询日志.md
+++ b/mongo/1. 慢查询日志.md
@@ -29,6 +29,10 @@ db.getProfilingLevel()
 ```
 db.setProfilingLevel(0)
 ```
+删除日志：
+```
+db.setProfilingLevel(0); db.system.profile.drop();db.setProfilingLevel(1, { slowms: 20 })
+```
 ## 第二部分 慢查询常用命令
 查询最近的10个慢查询日志
 ```
