--- a/Linux运维/9.iptable的使用.md
+++ b/Linux运维/9.iptable的使用.md
@@ -58,7 +58,7 @@ masquerade：IP伪装（NAT），用于ADSL。
 log：日志记录。
 ```
 ## 2、常用命令
-1、开放指定的端口
+#### 1、开放指定的端口
 ```
 iptables -A INPUT -s 127.0.0.1 -d 127.0.0.1 -j ACCEPT               #允许本地回环接口(即运行本机访问本机)
 iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT    #允许已建立的或相关连的通行
@@ -70,14 +70,14 @@ iptables -A INPUT -p tcp --dport 20 -j ACCEPT    #允许FTP服务的20端口
 iptables -A INPUT -j reject       #禁止其他未允许的规则访问
 iptables -A FORWARD -j REJECT     #禁止其他未允许的规则访问
 ```
-2、屏蔽IP
+#### 2、屏蔽IP
 ```
 iptables -I INPUT -s 123.45.6.7 -j DROP       #屏蔽单个IP的命令
 iptables -I INPUT -s 123.0.0.0/8 -j DROP      #封整个段即从123.0.0.1到123.255.255.254的命令
 iptables -I INPUT -s 124.45.0.0/16 -j DROP    #封IP段即从123.45.0.1到123.45.255.254的命令
 iptables -I INPUT -s 123.45.6.0/24 -j DROP    #封IP段即从123.45.6.1到123.45.6.254的命令是
 ```
-3、查看已添加的iptables规则
+#### 3、查看已添加的iptables规则
 ```
 iptables -L -n -v
 
@@ -97,7 +97,7 @@ Chain OUTPUT (policy ACCEPT 3382K packets, 1819M bytes)
  pkts bytes target     prot opt in     out     source               destination         
  5075  589K ACCEPT     all  --  *      lo      0.0.0.0/0            0.0.0.0/0  
 ```
-4、删除已添加的iptables规则
+#### 4、删除已添加的iptables规则
 
 将所有iptables以序号标记显示，执行：
 ```
@@ -107,15 +107,30 @@ iptables -L -n --line-numbers
 ```
 iptables -D INPUT 8
 ```
-5 ip 转换
+#### 5 ip 转换
 ```
 sudo iptables -t nat -A OUTPUT -d 121.8.210.236 -j DNAT --to-destination 192.168.191.236 
 
 sudo iptables -t nat -A OUTPUT -d 10.0.0.2 -p tcp --dport 11211 -j DNAT --to-destination 192.168.1.33:11211
 ```
 
-
-
+1.#增加
+```
+iptables -t nat -A PREROUTING -p tcp --dport 指定端口 -j REDIRECT --to-ports 53
+iptables -t nat -A PREROUTING -p udp --dport 指定端口 -j REDIRECT --to-ports 53
+```
+2.#删除-1就是num
+```
+iptables -t nat -D PREROUTING 1
+```
+3.#查看
+```
+service iptables status或iptables  -t  nat  -nL
+```
+4.#保存
+```
+sudo service iptables save
+```
 
 
 
