--- a/Linux运维/9.iptable的使用.md
+++ b/Linux运维/9.iptable的使用.md
@@ -125,7 +125,9 @@ iptables -t nat -D PREROUTING 1
 ```
 3.#查看
 ```
-service iptables status或iptables  -t  nat  -nL
+service iptables status
+iptables  -t  nat  -nL
+iptables  -t  nat  -nL --line-number
 ```
 4.#保存
 ```
